[package]
name = "tunnet-extended-loader"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_os = "windows")'.dependencies]
dll-syringe = "0.15.2"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.*"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
]

[target.'cfg(target_os = "linux")'.dependencies]
ptrace-inject = "0.1.2"
