[package]
name = "tunnet-extended"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
config = { version = "0.14.0", features = ["toml"] }
device_query = "2.1.0"
ilhook = "2.1.0"
lazy_static = "1.5.0"

[dependencies.windows]
version = "0.*"
features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_ProcessStatus",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
]
